--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,6 +8,13 @@
             <Setter Property="Background" Value="LightGray"/>
             <!-- Другие свойства для подсветки -->
         </Style>
+
+        <!-- Определение кисти для фона -->
+        <SolidColorBrush x:Key="PanelBackgroundBrush" Color="#FFEFF7FC"/>
+
+        <!-- Определение кисти для границы -->
+        <SolidColorBrush x:Key="PanelBorderBrush" Color="#FFA2A2A2"/>
+        
     </Window.Resources>
     <TabControl>
         <!-- Вкладка с растениями -->
@@ -22,15 +29,31 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <StackPanel MinWidth="170" MinHeight="220"  Orientation="Vertical" Margin="10" MouseEnter="StackPanel_MouseEnter" MouseLeave="StackPanel_MouseLeave">
-                                <TextBlock Text="{Binding Name}" FontWeight="Bold" FontSize="14"/>
-                                <Image Source="{Binding ImagePath}" Width="100" Height="100"/>
-                                <ProgressBar Value="{Binding Health}" Maximum="100" Width="100"/>
-                                <ProgressBar Value="{Binding WaterLevel}" Maximum="200" Width="100"/>
-                                <Button Content="Полить" Command="{Binding WaterCommand}" Margin="2" VerticalAlignment="Bottom" />
-                                <Button Content="Удобрить" Command="{Binding FertilizeCommand}" Margin="2" VerticalAlignment="Bottom"/>
-                                <Button Content="Лечить" Command="{Binding TreatCommand}" Margin="2" VerticalAlignment="Bottom"/>
-                            </StackPanel>
+                            <Border Background="{StaticResource PanelBackgroundBrush}" 
+                                    BorderBrush="{StaticResource PanelBorderBrush}" 
+                                    BorderThickness="1"
+                                    Margin="5"
+                                    CornerRadius="5" >
+                                <StackPanel MinWidth="120" MaxWidth="170" MinHeight="200" Orientation="Vertical" Margin="5"
+                                            MouseEnter="StackPanel_MouseEnter" MouseLeave="StackPanel_MouseLeave">
+                                    <TextBlock Text="{Binding Name}" FontWeight="Bold" FontSize="16" Margin="5" HorizontalAlignment="Center"/>
+
+                                    <Image Source="{Binding ImagePath}" Width="120" Height="120" Margin="10" HorizontalAlignment="Center"/>
+
+                                    <StackPanel Margin="5">
+                                        <TextBlock Text="Здоровье" FontSize="12" Margin="2"/>
+                                        <ProgressBar Value="{Binding Health}" Maximum="100" Width="140" Height="18" Margin="2"/>
+                                        <TextBlock Text="Уровень воды" FontSize="12" Margin="2"/>
+                                        <ProgressBar Value="{Binding WaterLevel}" Maximum="200" Width="140" Height="18" Margin="2"/>
+                                    </StackPanel>
+
+                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5">
+                                        <Button Content="Полить" Command="{Binding WaterCommand}" Margin="2"/>
+                                        <Button Content="Удобрить" Command="{Binding FertilizeCommand}" Margin="2"/>
+                                        <Button Content="Лечить" Command="{Binding TreatCommand}" Margin="2"/>
+                                    </StackPanel>
+                                </StackPanel>
+                            </Border>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
