--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -48,9 +48,9 @@
                                     </StackPanel>
 
                                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5">
-                                        <Button Content="Полить" Command="{Binding WaterCommand}" Margin="2"/>
-                                        <Button Content="Удобрить" Command="{Binding FertilizeCommand}" Margin="2"/>
-                                        <Button Content="Лечить" Command="{Binding TreatCommand}" Margin="2"/>
+                                        <Button Content="Полить" Command="{Binding DataContext.WaterCommand, RelativeSource={RelativeSource AncestorType=Window}}" Margin="2"/>
+                                        <Button Content="Удобрить" Command="{Binding DataContext.FertilizeCommand, RelativeSource={RelativeSource AncestorType=Window}}" Margin="2"/>
+                                        <Button Content="Лечить" Command="{Binding DataContext.TreatCommand, RelativeSource={RelativeSource AncestorType=Window}}" Margin="2"/>
                                     </StackPanel>
                                 </StackPanel>
                             </Border>
