--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="LeafyLove.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:LeafyLove.ViewModels"
+        xmlns:local="clr-namespace:LeafyLove.Utilities"
+        xmlns:utilities ="clr-namespace:LeafyLove.Utilities"
         Title="Виртуальное растение" Height="450" Width="800">
     <Window.Resources>
         <Style x:Key="HighlightStyle" TargetType="StackPanel">
@@ -14,35 +15,51 @@
 
         <!-- Определение кисти для границы -->
         <SolidColorBrush x:Key="PanelBorderBrush" Color="#FFA2A2A2"/>
-        
+
+        <local:TimeOfDayToBackgroundConverter x:Key="TimeOfDayToBackgroundConverter"/>
     </Window.Resources>
     <TabControl>
         <!-- Вкладка с растениями -->
         <TabItem Header="Главная">
             <ScrollViewer HorizontalScrollBarVisibility="Disabled">
-                <ItemsControl  HorizontalAlignment="Stretch" ItemsSource="{Binding User.Plants}">
+                <ItemsControl ItemsSource="{Binding User.Plants}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <WrapPanel Orientation="Horizontal" />
-                            <!-- Элементы будут упорядочены слева направо и перенесены на новую строку при необходимости -->
                         </ItemsPanelTemplate>
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Border Background="{StaticResource PanelBackgroundBrush}" 
-                                    BorderBrush="{StaticResource PanelBorderBrush}" 
-                                    BorderThickness="1"
-                                    Margin="5"
-                                    CornerRadius="5" >
-                                <StackPanel MinWidth="120" MaxWidth="170" MinHeight="200" Orientation="Vertical" Margin="5"
-                                            MouseEnter="StackPanel_MouseEnter" MouseLeave="StackPanel_MouseLeave">
+                            <Border BorderBrush="{StaticResource PanelBorderBrush}" 
+                            BorderThickness="1"
+                            Margin="5"
+                            CornerRadius="5">
+                                <!-- Фон для каждого растения -->
+                                <Border.Background>
+                                    <ImageBrush ImageSource="{Binding DataContext.CurrentBackground, RelativeSource={RelativeSource AncestorType=Window}}" 
+                                        Stretch="UniformToFill" 
+                                        AlignmentX="Center" 
+                                        AlignmentY="Center"/>
+                                </Border.Background>
+                                <StackPanel MinWidth="120" MaxWidth="170" MinHeight="200" Orientation="Vertical" Margin="5">
+                                    <StackPanel.Style>
+                                        <Style TargetType="StackPanel">
+                                            <Style.Triggers>
+                                                <Trigger Property="IsMouseOver" Value="True">
+                                                    <Setter Property="Background" Value="#55FFFFFF" />
+                                                </Trigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </StackPanel.Style>
+
+                                    <!-- Название растения -->
                                     <TextBlock Text="{Binding Name}" FontWeight="Bold" FontSize="16" Margin="5" HorizontalAlignment="Center"/>
 
-                                    <Image Width="160" Height="120">
+                                    <!-- Изображение растения -->
+                                    <Image Width="160" Height="120" VerticalAlignment="Bottom">
                                         <Image.Style>
                                             <Style TargetType="Image">
                                                 <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Seed.png"/>
-                                                <!-- Путь по умолчанию -->
                                                 <Style.Triggers>
                                                     <DataTrigger Binding="{Binding Stage}" Value="Seed">
                                                         <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Seed.png"/>
@@ -58,6 +75,7 @@
                                         </Image.Style>
                                     </Image>
 
+                                    <!-- Индикаторы здоровья и уровня воды -->
                                     <StackPanel Margin="5">
                                         <TextBlock Text="Здоровье" FontSize="12" Margin="2"/>
                                         <ProgressBar Value="{Binding Health}" Maximum="100" Width="140" Height="18" Margin="2"/>
@@ -65,6 +83,7 @@
                                         <ProgressBar Value="{Binding WaterLevel}" Maximum="200" Width="140" Height="18" Margin="2"/>
                                     </StackPanel>
 
+                                    <!-- Кнопки взаимодействия -->
                                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5">
                                         <Button Content="Полить" Command="{Binding DataContext.WaterCommand, RelativeSource={RelativeSource AncestorType=Window}}" Margin="2"/>
                                         <Button Content="Удобрить" Command="{Binding DataContext.FertilizeCommand, RelativeSource={RelativeSource AncestorType=Window}}" Margin="2"/>
