--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,22 +3,49 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:LeafyLove.Utilities"
         xmlns:utilities ="clr-namespace:LeafyLove.Utilities"
-        Title="Виртуальное растение" Height="450" Width="800">
+        Title="Виртуальное растение" Height="800" Width="1280">
+    <Window.Background>
+        <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+            <GradientStop Color="#FFD3E4F4" Offset="0"/>
+            <GradientStop Color="#FFA6BCD0" Offset="1"/>
+        </LinearGradientBrush>
+    </Window.Background>
     <Window.Resources>
-        <Style x:Key="HighlightStyle" TargetType="StackPanel">
-            <Setter Property="Background" Value="LightGray"/>
-            <!-- Другие свойства для подсветки -->
-        </Style>
-
         <!-- Определение кисти для фона -->
         <SolidColorBrush x:Key="PanelBackgroundBrush" Color="#FFEFF7FC"/>
 
         <!-- Определение кисти для границы -->
         <SolidColorBrush x:Key="PanelBorderBrush" Color="#FFA2A2A2"/>
 
+        <Style x:Key="ProgressBarStyle" TargetType="{x:Type ProgressBar}">
+            <Setter Property="Foreground" Value="Green"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="BorderBrush" Value="Gray"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="Height" Value="15"/>
+            <Setter Property="Margin" Value="2"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ProgressBar}">
+                        <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" CornerRadius="2">
+                            <Grid x:Name="PART_Track">
+                                <Rectangle x:Name="PART_Indicator" HorizontalAlignment="Left" Fill="{TemplateBinding Foreground}" />
+                            </Grid>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
         <local:TimeOfDayToBackgroundConverter x:Key="TimeOfDayToBackgroundConverter"/>
     </Window.Resources>
     <TabControl>
+        <TabControl.Background>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="#FFD3E4F4" Offset="0"/>
+                <GradientStop Color="#FFA6BCD0" Offset="1"/>
+            </LinearGradientBrush>
+        </TabControl.Background>
         <!-- Вкладка с растениями -->
         <TabItem Header="Главная">
             <ScrollViewer HorizontalScrollBarVisibility="Disabled">
@@ -32,8 +59,9 @@
                         <DataTemplate>
                             <Border BorderBrush="{StaticResource PanelBorderBrush}" 
                             BorderThickness="1"
-                            Margin="5"
-                            CornerRadius="5">
+                            Margin="8,4,0,0"
+                            CornerRadius="5"
+                            MaxHeight="600">
                                 <!-- Фон для каждого растения -->
                                 <Border.Background>
                                     <ImageBrush ImageSource="{Binding DataContext.CurrentBackground, RelativeSource={RelativeSource AncestorType=Window}}" 
@@ -41,7 +69,7 @@
                                         AlignmentX="Center" 
                                         AlignmentY="Center"/>
                                 </Border.Background>
-                                <StackPanel MinWidth="120" MaxWidth="170" MinHeight="200" Orientation="Vertical" Margin="5">
+                                <StackPanel MinWidth="300" MinHeight="600" Orientation="Vertical" VerticalAlignment="Stretch" MouseEnter="StackPanel_MouseEnter" MouseLeave="StackPanel_MouseLeave">
                                     <StackPanel.Style>
                                         <Style TargetType="StackPanel">
                                             <Style.Triggers>
@@ -56,38 +84,48 @@
                                     <TextBlock Text="{Binding Name}" FontWeight="Bold" FontSize="16" Margin="5" HorizontalAlignment="Center"/>
 
                                     <!-- Изображение растения -->
-                                    <Image Width="160" Height="120" VerticalAlignment="Bottom">
+                                    <Image Width="300" Height="180" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,240,0,0">
                                         <Image.Style>
-                                            <Style TargetType="Image">
-                                                <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Seed.png"/>
-                                                <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding Stage}" Value="Seed">
-                                                        <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Seed.png"/>
-                                                    </DataTrigger>
-                                                    <DataTrigger Binding="{Binding Stage}" Value="Sprout">
-                                                        <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Sprout.png"/>
-                                                    </DataTrigger>
-                                                    <DataTrigger Binding="{Binding Stage}" Value="Mature">
-                                                        <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Mature.png"/>
-                                                    </DataTrigger>
-                                                </Style.Triggers>
-                                            </Style>
-                                        </Image.Style>
+                                                <Style TargetType="Image">
+                                                    <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Seed.png"/>
+                                                    <Style.Triggers>
+                                                        <DataTrigger Binding="{Binding Stage}" Value="Seed">
+                                                            <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Seed.png"/>
+                                                        </DataTrigger>
+                                                        <DataTrigger Binding="{Binding Stage}" Value="Sprout">
+                                                            <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Sprout.png"/>
+                                                        </DataTrigger>
+                                                        <DataTrigger Binding="{Binding Stage}" Value="Mature">
+                                                            <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Mature.png"/>
+                                                        </DataTrigger>
+                                                    </Style.Triggers>
+                                                </Style>
+                                            </Image.Style>
                                     </Image>
 
-                                    <!-- Индикаторы здоровья и уровня воды -->
-                                    <StackPanel Margin="5">
-                                        <TextBlock Text="Здоровье" FontSize="12" Margin="2"/>
-                                        <ProgressBar Value="{Binding Health}" Maximum="100" Width="140" Height="18" Margin="2"/>
-                                        <TextBlock Text="Уровень воды" FontSize="12" Margin="2"/>
-                                        <ProgressBar Value="{Binding WaterLevel}" Maximum="200" Width="140" Height="18" Margin="2"/>
+                                        <!-- Индикаторы здоровья и уровня воды -->
+                                    <StackPanel VerticalAlignment="Bottom" Margin="0,8,0,0">
+                                    <StackPanel Margin="3" VerticalAlignment="Bottom">
+                                            <TextBlock Text="Здоровье" FontSize="12" FontWeight="Bold">
+                                            <TextBlock.Effect>
+                                                <DropShadowEffect ShadowDepth="0" BlurRadius="15" Color="White"/>
+                                            </TextBlock.Effect>
+                                        </TextBlock>
+                                        <ProgressBar Value="{Binding Health}" Style="{StaticResource ProgressBarStyle}" Maximum="100" Width="100" Height="15" HorizontalAlignment="Left"/>
+                                        <TextBlock Text="Уровень воды" FontSize="12" FontWeight="Bold" >
+                                            <TextBlock.Effect>
+                                                <DropShadowEffect ShadowDepth="0" BlurRadius="15" Color="White"/>
+                                            </TextBlock.Effect>
+                                        </TextBlock>
+                                        <ProgressBar Value="{Binding WaterLevel}" Style="{StaticResource ProgressBarStyle}" Maximum="200" Width="100" Height="15" HorizontalAlignment="Left"/>
                                     </StackPanel>
 
                                     <!-- Кнопки взаимодействия -->
-                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5">
-                                        <Button Content="Полить" Command="{Binding DataContext.WaterCommand, RelativeSource={RelativeSource AncestorType=Window}}" Margin="2"/>
-                                        <Button Content="Удобрить" Command="{Binding DataContext.FertilizeCommand, RelativeSource={RelativeSource AncestorType=Window}}" Margin="2"/>
-                                        <Button Content="Лечить" Command="{Binding DataContext.TreatCommand, RelativeSource={RelativeSource AncestorType=Window}}" Margin="2"/>
+                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="10">
+                                        <Button Content="Полить" Command="{Binding DataContext.WaterCommand, RelativeSource={RelativeSource AncestorType=Window}}" Margin="5"/>
+                                        <Button Content="Удобрить" Command="{Binding DataContext.FertilizeCommand, RelativeSource={RelativeSource AncestorType=Window}}" Margin="5"/>
+                                        <Button Content="Лечить" Command="{Binding DataContext.TreatCommand, RelativeSource={RelativeSource AncestorType=Window}}" Margin="5"/>
+                                    </StackPanel>
                                     </StackPanel>
                                 </StackPanel>
                             </Border>
