--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:LeafyLove.Utilities"
+        xmlns:controls="clr-namespace:LeafyLove.Views"
         xmlns:utilities ="clr-namespace:LeafyLove.Utilities"
         Title="Виртуальное растение" Height="800" Width="1280">
     <Window.Background>
@@ -11,33 +12,32 @@
         </LinearGradientBrush>
     </Window.Background>
     <Window.Resources>
-        <!-- Определение кисти для фона -->
         <SolidColorBrush x:Key="PanelBackgroundBrush" Color="#FFEFF7FC"/>
-
-        <!-- Определение кисти для границы -->
         <SolidColorBrush x:Key="PanelBorderBrush" Color="#FFA2A2A2"/>
+        <SolidColorBrush x:Key="ButtonHoverBackground" Color="#FFD6EAF8"/>
 
-        <Style x:Key="ProgressBarStyle" TargetType="{x:Type ProgressBar}">
+        <!-- Стиль для ProgressBar -->
+        <Style x:Key="ProgressBarStyle" TargetType="ProgressBar">
             <Setter Property="Foreground" Value="Green"/>
-            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Background" Value="#FFEFF7FC"/>
             <Setter Property="BorderBrush" Value="Gray"/>
             <Setter Property="BorderThickness" Value="1"/>
             <Setter Property="Height" Value="15"/>
-            <Setter Property="Margin" Value="2"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type ProgressBar}">
-                        <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" CornerRadius="2">
-                            <Grid x:Name="PART_Track">
-                                <Rectangle x:Name="PART_Indicator" HorizontalAlignment="Left" Fill="{TemplateBinding Foreground}" />
-                            </Grid>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
+        </Style>
+
+        <Style x:Key="ActionButtonStyle" TargetType="Button">
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Width" Value="80"/>
+            <Setter Property="Background" Value="LightGray"/>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="{StaticResource ButtonHoverBackground}"/>
+                </Trigger>
+            </Style.Triggers>
         </Style>
 
         <local:TimeOfDayToBackgroundConverter x:Key="TimeOfDayToBackgroundConverter"/>
+        <local:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     </Window.Resources>
     <TabControl>
         <TabControl.Background>
@@ -52,7 +52,7 @@
                 <ItemsControl ItemsSource="{Binding User.Plants}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
-                            <WrapPanel Orientation="Horizontal" />
+                            <UniformGrid Columns="4"/>
                         </ItemsPanelTemplate>
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
@@ -69,65 +69,62 @@
                                         AlignmentX="Center" 
                                         AlignmentY="Center"/>
                                 </Border.Background>
-                                <StackPanel MinWidth="300" MinHeight="600" Orientation="Vertical" VerticalAlignment="Stretch" MouseEnter="StackPanel_MouseEnter" MouseLeave="StackPanel_MouseLeave">
-                                    <StackPanel.Style>
-                                        <Style TargetType="StackPanel">
-                                            <Style.Triggers>
-                                                <Trigger Property="IsMouseOver" Value="True">
-                                                    <Setter Property="Background" Value="#55FFFFFF" />
-                                                </Trigger>
-                                            </Style.Triggers>
-                                        </Style>
-                                    </StackPanel.Style>
+                                <Grid>
+                                    <StackPanel MinWidth="300" MinHeight="600" Orientation="Vertical" VerticalAlignment="Stretch" MouseEnter="StackPanel_MouseEnter" MouseLeave="StackPanel_MouseLeave">
+                                        <StackPanel.Style>
+                                            <Style TargetType="StackPanel">
+                                                <Style.Triggers>
+                                                    <Trigger Property="IsMouseOver" Value="True">
+                                                        <Setter Property="Background" Value="#55FFFFFF" />
+                                                    </Trigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </StackPanel.Style>
 
-                                    <!-- Название растения -->
-                                    <TextBlock Text="{Binding Name}" FontWeight="Bold" FontSize="16" Margin="5" HorizontalAlignment="Center"/>
+                                        <!-- Название растения -->
+                                        <TextBlock Text="{Binding Name}" FontWeight="Bold" FontSize="16" Margin="5" HorizontalAlignment="Center"/>
 
-                                    <!-- Изображение растения -->
-                                    <Image Width="300" Height="180" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,240,0,0">
-                                        <Image.Style>
-                                                <Style TargetType="Image">
-                                                    <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Seed.png"/>
-                                                    <Style.Triggers>
-                                                        <DataTrigger Binding="{Binding Stage}" Value="Seed">
-                                                            <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Seed.png"/>
-                                                        </DataTrigger>
-                                                        <DataTrigger Binding="{Binding Stage}" Value="Sprout">
-                                                            <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Sprout.png"/>
-                                                        </DataTrigger>
-                                                        <DataTrigger Binding="{Binding Stage}" Value="Mature">
-                                                            <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Mature.png"/>
-                                                        </DataTrigger>
-                                                    </Style.Triggers>
-                                                </Style>
-                                            </Image.Style>
-                                    </Image>
+                                        <!-- Изображение растения -->
+                                        <Image Width="300" Height="180" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,240,0,0">
+                                            <Image.Style>
+                                                    <Style TargetType="Image">
+                                                        <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Seed.png"/>
+                                                        <Style.Triggers>
+                                                            <DataTrigger Binding="{Binding Stage}" Value="Seed">
+                                                                <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Seed.png"/>
+                                                            </DataTrigger>
+                                                            <DataTrigger Binding="{Binding Stage}" Value="Sprout">
+                                                                <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Sprout.png"/>
+                                                            </DataTrigger>
+                                                            <DataTrigger Binding="{Binding Stage}" Value="Mature">
+                                                                <Setter Property="Source" Value="pack://application:,,,/LeafyLove;component/Resources/Images/Plants/Mature.png"/>
+                                                            </DataTrigger>
+                                                        </Style.Triggers>
+                                                    </Style>
+                                                </Image.Style>
+                                        </Image>
 
+                                       
                                         <!-- Индикаторы здоровья и уровня воды -->
-                                    <StackPanel VerticalAlignment="Bottom" Margin="0,8,0,0">
-                                    <StackPanel Margin="3" VerticalAlignment="Bottom">
-                                            <TextBlock Text="Здоровье" FontSize="12" FontWeight="Bold">
-                                            <TextBlock.Effect>
-                                                <DropShadowEffect ShadowDepth="0" BlurRadius="15" Color="White"/>
-                                            </TextBlock.Effect>
-                                        </TextBlock>
-                                        <ProgressBar Value="{Binding Health}" Style="{StaticResource ProgressBarStyle}" Maximum="100" Width="100" Height="15" HorizontalAlignment="Left"/>
-                                        <TextBlock Text="Уровень воды" FontSize="12" FontWeight="Bold" >
-                                            <TextBlock.Effect>
-                                                <DropShadowEffect ShadowDepth="0" BlurRadius="15" Color="White"/>
-                                            </TextBlock.Effect>
-                                        </TextBlock>
-                                        <ProgressBar Value="{Binding WaterLevel}" Style="{StaticResource ProgressBarStyle}" Maximum="200" Width="100" Height="15" HorizontalAlignment="Left"/>
-                                    </StackPanel>
+                                        <StackPanel Margin="3">
+                                            <TextBlock Text="Здоровье" FontSize="12" FontWeight="Bold"/>
+                                            <ProgressBar Value="{Binding Health}" Style="{StaticResource ProgressBarStyle}" Maximum="100"/>
 
-                                    <!-- Кнопки взаимодействия -->
-                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="10">
-                                        <Button Content="Полить" Command="{Binding DataContext.WaterCommand, RelativeSource={RelativeSource AncestorType=Window}}" Margin="5"/>
-                                        <Button Content="Удобрить" Command="{Binding DataContext.FertilizeCommand, RelativeSource={RelativeSource AncestorType=Window}}" Margin="5"/>
-                                        <Button Content="Лечить" Command="{Binding DataContext.TreatCommand, RelativeSource={RelativeSource AncestorType=Window}}" Margin="5"/>
+                                            <TextBlock Text="Уровень воды" FontSize="12" FontWeight="Bold"/>
+                                            <ProgressBar Value="{Binding WaterLevel}" Style="{StaticResource ProgressBarStyle}" Maximum="100"/>
+                                        </StackPanel>
+
+                                        <!-- Кнопки взаимодействия -->
+                                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
+                                            <Button Content="Полить" Command="{Binding DataContext.WaterCommand, RelativeSource={RelativeSource AncestorType=Window}}" Style="{StaticResource ActionButtonStyle}"/>
+                                            <Button Content="Удобрить" Command="{Binding DataContext.FertilizeCommand, RelativeSource={RelativeSource AncestorType=Window}}" Style="{StaticResource ActionButtonStyle}"/>
+                                            <Button Content="Лечить" Command="{Binding DataContext.TreatCommand, RelativeSource={RelativeSource AncestorType=Window}}" Style="{StaticResource ActionButtonStyle}"/>
+                                        </StackPanel>
+
                                     </StackPanel>
-                                    </StackPanel>
-                                </StackPanel>
+                                    
+
+                                </Grid>
                             </Border>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
